--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
 
 body {
   background-color: var(--bg-down);
+  height: 1630px;
+
 }
 
 body::before {
@@ -28,6 +30,7 @@ body::before {
 
 .page {
   text-align: center;
+
 }
 
 header {
@@ -78,10 +81,13 @@ header p {
 
 form {
   width: 750px;
+  height: 1075px;
+  margin-bottom: 392px;
   background-color: var(--bg-form);
   margin: auto;
   padding: 31px 64px 178px;
   font-family: "Poppins", sans-serif;
+  border-radius: 0 0 20px 20px;
 }
 
 label {
@@ -92,19 +98,20 @@ label {
 }
 
 span {
-	font-family: 'Poppins';
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 20px;
-	color: #C1BCCC;
-	margin-left:9px;
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #c1bccc;
+  margin-left: 9px;
 }
 
-span:hover{
-	color: #8a888f;
+span:hover {
+  color: #8a888f;
 }
 
-input {
+input,
+textarea {
   width: 300px;
   height: 56px;
   border: 1px solid #e6e6f0;
@@ -114,16 +121,30 @@ input {
   font-size: 14px;
   line-height: 24px;
   padding: 10px;
-	margin-bottom: 16px;
+  margin-bottom: 16px;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
 }
 
+textarea {
+  width: 608px;
+  height: 167px;
+}
 
 /* alinha a label ao canto esquerdo do input */
 .input-wrapper,
-.input-wrapper-email {
+.input-wrapper-email,
+.input-wrapper-mentor,
+.input-wrapper-feedback,
+.input-date,
+.input-time {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.input-wrapper-mentor input {
+  margin-bottom: 32px;
 }
 
 /* alinha o campo da nome e sobrenome ao lado */
@@ -135,4 +156,90 @@ input {
 /* alinha o input do email ao tamanho 100% do form */
 .input-wrapper-email input {
   width: 100%;
+}
+
+.sub-title h2 {
+  border-bottom: 1px solid #e6e6f0;
+  padding-bottom: 8px;
+  margin-bottom: 32px;
+  font-family: "Staatliches";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 34px;
+  color: #253b51;
+}
+
+.checkbox-wrapper {
+  position: relative;
+  margin-bottom: 36px;
+}
+
+.checkbox-wrapper label {
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  line-height: 24px;
+  color: #4e4958;
+  gap: 16px;
+}
+
+.checkbox-wrapper input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+
+  opacity: 0;
+}
+
+.checkbox-wrapper label::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  border: 1px solid #e6e6f0;
+  display: block;
+  border-radius: 8px;
+}
+
+.checkbox-wrapper input:checked + label::before {
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.00016 16.1698L4.83016 11.9998L3.41016 13.4098L9.00016 18.9998L21.0002 6.99984L19.5902 5.58984L9.00016 16.1698Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
+}
+
+.checkbox-wrapper input:focus + label::before {
+  outline: 2px solid black;
+}
+
+.container-data,
+.container-hora {
+  display: flex;
+  gap: 32px;
+}
+
+.container-hora {
+  gap: 10px;
+}
+
+#input-time {
+  width: 140px;
+}
+
+.container-data input,
+.container-hora input {
+  margin-bottom: 64px;
+
+}
+
+button {
+  background: #f67669;
+  border-radius: 8px;
+  width: 100%;
+  height: 51px;
+  font-family: "Staatliches";
+  font-size: 20px;
+  line-height: 26px;
+  color: #ffffff;
+  border: none;
+  margin-bottom: 64px;
 }
